<resources>
    <string name="app_name">Login&amp; Registration Service</string>
    <string name="reset_password">Reset Password</string>
    <string name="register">REGISTER</string>
    <string name="need_to_register">Need to Register ?</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">LOGIN</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="z_h_a_m">Z H A M</string>
    <string name="back">Back</string>
    <string name="birth_date">Birth Date</string>
    <string name="gender">Gender</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="cvv">CVV</string>
    <string name="card_number">Card Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password1">firstPassword</string>
    <string name="email_address">Email Address</string>
    <string name="username1">usernameRegistration</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="back_to_login">Back to Login</string>
    <string name="username_registration">Username</string>
    <string name="password_registration">Password</string>
    <string name="submit">Submit</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">already have an account?</string>
    <string name="already_have_an_account2">Already_have_an_account</string>
    <string name="err_msg_enter_first_name">Please Enter First Name</string>
    <string name="err_msg_enter_user_name">Please Enter Username</string>
    <string name="err_msg_enter_EmailID">Please Enter Email address</string>
    <string name="err_msg_enter_Password">Please Enter A Password</string>
    <string name="err_msg_enter_confirm_Password">Please Confirm Your Password</string>
    <string name="suucessful_registration">Registery Successfull</string>
    <string name="already_have_an_account3">Already have an account</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="err_msg_enter_Mobile_no">Please Enter Your Mobile Number</string>
    <string name="err_msg_enter_card_no">Please Enter Your Card Number</string>
    <string name="err_msg_enter_cvv_no">Please Enter the Cvv Number for your Card</string>
    <string name="err_msg_enter_expiration_date">"Please Enter the Expiration Date for your card "</string>
    <string name="err_msg_enter_checkbox"><![CDATA[You Must Apply for terms & Conditions]]></string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="i_agree_to_the_terms_and_conditions">I Agree to the Terms and Conditions</string>
</resources>