<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/Fullname"
        android:layout_width="match_parent"
        android:hint="@string/full_name"
        android:layout_height="wrap_content"
        android:inputType="text" />
    <EditText
        android:id="@+id/Username"
        android:layout_width="match_parent"
        android:hint="@string/username1"
        android:inputType="text"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/Emailaddress"
        android:layout_width="match_parent"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:hint="@string/password1"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/Confirmpassword"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:hint="@string/confirm_password"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/Mobilenumber"
        android:layout_width="match_parent"
        android:hint="@string/mobile_number"
        android:inputType="number"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/Cardnumber"
        android:layout_width="match_parent"
        android:hint="@string/card_number"
        android:inputType="number"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/Cvv"
        android:layout_width="match_parent"
        android:hint="@string/cvv"
        android:inputType="numberPassword"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/Expirationdate"
        android:layout_width="match_parent"
        android:hint="@string/expiration_date"
        android:inputType="date"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/Gender"
        android:layout_width="match_parent"
        android:hint="@string/gender"
        android:inputType="textShortMessage"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/Birthdate"
        android:layout_width="match_parent"
        android:hint="@string/birth_date"
        android:inputType="date"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/Save"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:text="@string/register"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/Backbtn"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:text="@string/back"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>


</LinearLayout>