<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".ui.RegisterActivity">

    <EditText
        android:id="@+id/Fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username1"
        android:inputType="text" />

    <EditText
        android:id="@+id/Emailaddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password1"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/Confirmpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/Mobilenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_number"
        android:inputType="number" />

    <EditText
        android:id="@+id/Cardnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_number"
        android:inputType="number" />

    <EditText
        android:id="@+id/Cvv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cvv"
        android:inputType="numberPassword" />

    <EditText
        android:id="@+id/Expirationdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/expiration_date"
        android:inputType="date" />

    <EditText
        android:id="@+id/Gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gender"
        android:inputType="textShortMessage" />

    <EditText
        android:id="@+id/Birthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/birth_date"
        android:inputType="date" />

    <Button
        android:id="@+id/Save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Backbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/back"
        android:textColor="@color/black"
        android:textStyle="bold" />


</LinearLayout>