<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_margin="25dp"
    android:layout_height="match_parent"
    tools:context=".ui.ForgetPasswordActivity">

    <EditText
        android:id="@+id/Emailaddresspassword"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:hint="@string/enter_your_email_address"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/Resetpassword"
        android:layout_width="wrap_content"
        android:text="@string/reset_password"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/Backtologin"
        android:layout_width="wrap_content"
        android:text="@string/back_to_login"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_height="wrap_content" />

</LinearLayout>